# Embedded-System-Design-pattern

Terminology/1_EmbeddedProgramming/FiniteStateMachine/: SecuritySupervisorEventDispatcher.puml  SecuritySupervisorEventDispatcher.txt  finiteStatemachine.txt
Terminology/1_EmbeddedProgramming/QueueExample/: cachedQueue.c
Terminology/1_EmbeddedProgramming/QueueExample/Implmentation/: cachedQueue.c  queue.c  queueTestProgram.c
Terminology/1_EmbeddedProgramming/SensorExample/Implementattion/: README.md  Sensor.h
Terminology/1_EmbeddedProgramming/SensorExample/diagrams/: SensorHeaderUsage_ClassDiagram.puml  SensorHeaderUsage_SequenceDiagram.puml
Terminology/2_EmbeddedProgrammingWithREalTimeProcess/ClientServerArchitecture/withObserverpattern/: Makefile
Terminology/2_EmbeddedProgrammingWithREalTimeProcess/ObserverPattern/: README.md
Terminology/2_EmbeddedProgrammingWithREalTimeProcess/ObserverPattern/Implementation/: TMDQueue.c
Terminology/2_EmbeddedProgrammingWithREalTimeProcess/ObserverPattern/diagrams/: ClassDiagram.puml
Terminology/2_EmbeddedProgrammingWithREalTimeProcess/ObserverPattern/src/: ArrythmiaDetector.h  ECGPkg.h  HistogramDisplay.h  TMDQueue.h  TestBuilder.c  WaveformDisplay.c  main.c
Terminology/3_DesignPatternForAccessingHardware/: BitFieldInC.c  basics.txt
Terminology/3_DesignPatternForAccessingHardware/DebouncingPattern/: Makefile  Timer.c  Timer.h  debouncingPattern.text
Terminology/3_DesignPatternForAccessingHardware/HardwareProxyPattern/: hardwareproxypattern.txt
Terminology/3_DesignPatternForAccessingHardware/Interupt pattern/: Makefile  RobotInterruptVectorTable.h
Terminology/3_DesignPatternForAccessingHardware/Polling pattern/: BCPeriodicPoller.c  pollingPattern.txt
Terminology/3_DesignPatternForAccessingHardware/hardWareAdaptorPattern/: HardwareAdapterPattern.cpp  Makefile
Terminology/4_DesignPatternForConcurrencyAndResourceManagement/CriticalRegionPattern/: MotorZeroSequenceDiagram.puml
Terminology/4_DesignPatternForConcurrencyAndResourceManagement/Order Locking Pattern/: Velocity.h  VelocitySensor.c
Terminology/4_DesignPatternForConcurrencyAndResourceManagement/QueuingPattern/: GasData.c  GasDataQueue.h  N2Sensor.c  SensorThread.h
Terminology/4_DesignPatternForConcurrencyAndResourceManagement/deadlock pattern/: DeadlockPattern.cpp
Terminology/5_DesignPatternForStateMachine/Multiple Receptor Pattern/: MultipleReceptorPattern.txt
Terminology/5_DesignPatternForStateMachine/State Pattern/: StatePattern.txt
Terminology/6_SafetyAndReliabilityPattern/ChannelPattern/ChannelPatternImplementation/Implementation/: AbstractDataTransform.cpp  CMakeLists.txt  Channel.h  MovingAverageFilter.h
Terminology/6_SafetyAndReliabilityPattern/dualChannelPattern/Implmentation/: CMakeLists.txt  Channel.cpp  OpticalWheelSpeedSensor.cpp  SpeedFilterTransform.h  SpeedToEngineOutputTransform.cpp  main.cpp
Terminology/6_SafetyAndReliabilityPattern/one's complemnet pattern/: README.md
Terminology/Chapter1/FiniteStateMachine/: SecuritySupervisorEventDispatcher.txt  SecuritySupervisorEventDispatcher_ClassDiagram.puml  SecuritySupervisorEventDispatcher_SequenceDiagram.puml  finiteStatemachine.txt
Terminology/Chapter1/QueueExample/: cachedQueue.h  queue.c  queue.h  queueTestProgram.c
Terminology/Chapter1/SensorExample/: Sensor.h  class.txt
Terminology/Chapter1/SensorExample/Implementattion/: Sensor.c  (+1 more)
Terminology/Chapter2/ObserverPattern/: Makefile
Terminology/Chapter3/DebouncingPattern/: Button.c  MicrowaveEmitter.h  README.md
Terminology/Chapter3/HardwareProxyPattern/: Makefile  MotorProxy.hpp  README.md
Terminology/Chapter3/Interupt pattern/: ButtonHandler.c  Interuptpattern.txt  LED.c  README.md  RobotInterruptVectorTable.c  main.c
Terminology/Chapter3/ObserverPattern/: Makefile  README.md  oberver.txt
Terminology/Chapter3/Polling pattern/: BreathingCircuitSensor.c  MedicalDisplay.h  README.md  main.c
Terminology/Chapter3/hardWareAdaptorPattern/: HardwareAdapterPattern.h  README.md  hardWareAdaptorPattern.txt
Terminology/Chapter4/CriticalRegionPattern/: SequenceDiagram.puml  criticalReasion.txt
Terminology/Chapter4/Gaurded call pattern/: gaurded_call_pattern.txt
Terminology/Chapter4/Order Locking Pattern/: AttitudeSensor.c  Mutex.h
Terminology/Chapter4/QueuingPattern/: GasDataQueue.c  GasProcessingThread.c  N2Sensor.h  QueuingPattern.txt
Terminology/Chapter4/Simultanious Locking Pattern/: DopplerSpeedSensor.h  SimMutex.h  simultaniousLockingPattern.txt
Terminology/Chapter4/deadlock pattern/Implementation/: CMakeLists.txt  DeadlockPattern.h  Makefile
Terminology/Chapter4_ConcurrencyNResourceManagement/CriticalRegionPattern/: README.md
Terminology/Chapter4_ConcurrencyNResourceManagement/Order Locking Pattern/: Attitude.c  Attitude.h  AttitudeSensor.h  Makefile  OrderedLockingExample.h  Position.c  PositionSensor.c  README.md  ResourceList.c  ResourceList.h  VelocitySensor.h  main.c  orderLockingPattern.txt
Terminology/Chapter4_ConcurrencyNResourceManagement/QueuingPattern/: GasDisplay.c  GasProcessingThread.h  HeSensor.c  HeSensor.h
Terminology/Chapter4_ConcurrencyNResourceManagement/Simultanious Locking Pattern/: Position.h
Terminology/Chapter4_ConcurrencyNResourceManagement/deadlock pattern/: README.md
Terminology/Chapter5/Decomposed And State Pattern/: decomposedAndStatePattern.txt
Terminology/Chapter5/Multiple Receptor Pattern/: README.md
Terminology/Chapter5/State Table Design pattern/: README.md
Terminology/Chapter6/SmartDataPattern/: README.md  SmartDataPattern.txt
Terminology/Chapter6/dualChannelPattern/: dualChanelPattern.txt
Terminology/UMLDiagram/: ClassDiagram.puml  README.md  RelationshipExamples.puml  SequenceDiagram.puml  StateDiagram.puml  UMLOverview.puml
UML diagram/: ClassDiagram.puml  README.md  SequenceDiagram.puml
(+333 files in other folders)
